cmake_minimum_required(VERSION 2.8)
project(tracer_unittests)
file(GLOB_RECURSE GTEST "contrib/src/*.cc")
set(SOURCE_EXE main.cpp TraceParser.cpp ${GTEST})
include_directories(../src contrib)
add_executable(utest ${SOURCE_EXE})

find_package(Threads REQUIRED)
if(THREADS_HAVE_PTHREAD_ARG)
  set_property(TARGET utest PROPERTY COMPILE_OPTIONS "-pthread")
  set_property(TARGET utest PROPERTY INTERFACE_COMPILE_OPTIONS "-pthread")
endif()
if(CMAKE_THREAD_LIBS_INIT)
  target_link_libraries(utest tracer "${CMAKE_THREAD_LIBS_INIT}")
endif()
